imaptar (1.2) jessie stretch; urgency=low

  * fix "after running imaptar all messages are marked as read" bug.

 -- Miquel van Smoorenburg (XS4ALL) <mikevs@xs4all.net>  Sat, 13 Jan 2018 15:30:51 +0100

imaptar (1.1) jessie stretch; urgency=low

  * fix race condition in listing / acting on folders.

 -- Miquel van Smoorenburg (XS4ALL) <mikevs@xs4all.net>  Fri, 12 Jan 2018 13:28:24 +0100

imaptar (1.0) jessie stretch; urgency=low

  * initial release

 -- Miquel van Smoorenburg (XS4ALL) <mikevs@xs4all.net>  Thu, 11 Jan 2018 16:22:32 +0100